--- a/package.json
+++ b/package.json
@@ -8,8 +8,25 @@
     }
   },
   "lint-staged": {
-    "app/**/*.{js,es6,jsx}": [
-      "./node_modules/prettier/bin/prettier.js --trailing-comma --single-quote es5 --write",
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "{app,spec}/**/*.rb": [
+      "bundle exec rubocop --require rubocop-rspec --safe-auto-correct",
+      "git add"
+    ],
+    "app/**/*.html.erb": [
+      "bin/bundle exec erblint",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.md": [
+      "prettier --write",
       "git add"
     ]
   },
